# zero-wechat-article-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/: entertainment-article  hot-topics  zero-attentionvc-scrape  zero-deliverables  zero-toutiao-entertainment  zero-twitter-collect  zero-wechat-article  zero-wechat-article-write  zero-wechat-auto
.agents/skills/byted-bytehouse-ai-query/: SKILL.md
.agents/skills/byted-bytehouse-mcp/: SKILL.md
.agents/skills/byted-supabase/: _meta.json
.agents/skills/deepsearch/: SKILL.md
.agents/skills/link-reader/: SKILL.md
.claude/agents/: zero-wechat-article-agent.md
.claude/skills/entertainment-article/: SKILL.md
.claude/skills/hot-topics/: SKILL.md
.claude/skills/toutiao-article-writer/: SKILL.md
.claude/skills/volc-search/: skill.md
.cursor/skills/: entertainment-article  hot-topics  zero-attentionvc-scrape  zero-deliverables  zero-toutiao-entertainment  zero-toutiao-livelihood-workflow  zero-twitter-collect  zero-wechat-article  zero-wechat-article-write  zero-wechat-auto
data/auth/: volc_search.json.example
docs/: ARCHITECTURE.md  PIPELINE-LOGIC.md  WECHAT-MP-API.md
examples/: brief-daily-ai.json
scripts/: auto_daily_wechat.py  brief_from_signals.py  compose_chinese_article.py  demo_toutiao_full_report.py  e2e_publish_wechat.sh  pipeline_daily_toutiao_entertainment.py  pipeline_top_article.py
src/zero_wechat_article/: __init__.py  cli.py  client.py  config.py
workflows/: toutiao-entertainment-compose.md
(+95 files in other folders)
